fixed text spacing

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -109,7 +109,7 @@
   font-size: 16px;
   color: #292929;
   margin: 0 0 1.5rem;
-  text-align: justify;
+  text-align: left; /* Changed from justify */
 }
 
 /* Diagram Section */
